# assignment1-basics

./: .gitignore  Cargo.toml  README.md  generate_dataset.py  load_vocab.py  main.py  play.py  pyproject.toml  tokenizer_experiments.py  train_bpe_expts_owt.py  train_bpe_tinystories.py
cs336_basics/: data.py  main.py  nn.py  optim.py  train.py
src/: README.md  core.rs  lib.rs
src/core/: dec.rs  mod.rs
tests/: adapters.py  test_train_bpe.py  tokenizer.py
tests/bpe/: Cargo.toml
tests/bpe/src/: lib.rs
tests/rust/: Cargo.toml
tests/rust/src/: main.rs
toy/: sgd.py
